--- a/service.html
+++ b/service.html
@@ -21,7 +21,7 @@
     rel="stylesheet"
   >
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.min.css">
   <script src="main.js" defer></script>
 </head>
 
